@@ -3,6 +3,7 @@ package no.difi.meldingsutveksling.nextmove.servicebus;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import no.difi.meldingsutveksling.domain.MeldingsUtvekslingRuntimeException;
+import org.jetbrains.annotations.NotNull;
 import org.springframework.cache.CacheManager;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.client.ClientHttpResponse;
@@ -22,14 +23,15 @@ public class ServiceBusRestErrorHandler extends DefaultResponseErrorHandler {
     private final CacheManager cacheManager;
 
     @Override
-    protected void handleError(ClientHttpResponse response, HttpStatus statusCode) throws IOException {
-        if (statusCode == HttpStatus.UNAUTHORIZED) {
-            log.debug("Got status {} from service bus, invalidating sas key", statusCode.toString());
+    public void handleError(@NotNull ClientHttpResponse response) throws IOException {
+        if (HttpStatus.UNAUTHORIZED.isSameCodeAs(response.getStatusCode())) {
+            log.debug("Got status {} from service bus, invalidating sas key", HttpStatus.valueOf(response.getStatusCode().value()).getReasonPhrase());
             Optional.ofNullable(cacheManager.getCache(CACHE_GET_SAS_KEY))
                     .orElseThrow(() -> new MeldingsUtvekslingRuntimeException(
-                            String.format("Couldn't get cache names %s", CACHE_GET_SAS_KEY)))
+                            "Couldn't get cache names %s".formatted(CACHE_GET_SAS_KEY)))
                     .clear();
         }
-        super.handleError(response, statusCode);
+        super.handleError(response);
     }
+
 }
