@@ -4,16 +4,15 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import no.difi.meldingsutveksling.ServiceIdentifier;
 import no.difi.meldingsutveksling.clock.FixedClockConfig;
 import no.difi.meldingsutveksling.config.JacksonConfig;
+import no.difi.meldingsutveksling.oauth2.Oauth2ClientSecurityConfig;
 import no.difi.meldingsutveksling.status.Conversation;
 import no.difi.meldingsutveksling.status.ConversationQueryInput;
 import no.difi.meldingsutveksling.status.ConversationRepository;
 import no.difi.meldingsutveksling.status.service.ConversationController;
 import no.difi.meldingsutveksling.webhooks.filter.WebhookFilterParser;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.context.annotation.ComponentScan;
 import org.springframework.context.annotation.Import;
 import org.springframework.data.domain.PageImpl;
@@ -21,7 +20,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.TestPropertySource;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.result.MockMvcResultHandlers;
 
@@ -44,9 +43,8 @@ import static org.springframework.restdocs.payload.PayloadDocumentation.response
 import static org.springframework.restdocs.request.RequestDocumentation.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@ExtendWith(SpringExtension.class)
 @Import({FixedClockConfig.class, JacksonConfig.class, JacksonMockitoConfig.class})
-@WebMvcTest(ConversationController.class)
+@WebMvcTest({Oauth2ClientSecurityConfig.class, ConversationController.class})
 @AutoConfigureMoveRestDocs
 @TestPropertySource("classpath:/config/application-test.properties")
 @ActiveProfiles("test")
@@ -56,7 +54,7 @@ public class ConversationControllerTest {
     @Autowired private MockMvc mvc;
     @Autowired private ObjectMapper objectMapper;
 
-    @MockBean private ConversationRepository conversationRepository;
+    @MockitoBean private ConversationRepository conversationRepository;
 
     @Test
     public void find() throws Exception {
@@ -78,7 +76,7 @@ public class ConversationControllerTest {
                         requestHeaders(
                                 getDefaultHeaderDescriptors()
                         ),
-                        requestParameters(
+                        queryParameters(
                                 parameterWithName("messageId").optional().description("Filter on messageId"),
                                 parameterWithName("conversationId").optional().description("Filter on conversationId"),
                                 parameterWithName("receiver").optional().description("Filter on receiver (as ISO-6523)"),
@@ -89,7 +87,7 @@ public class ConversationControllerTest {
                                 parameterWithName("messageTitle").optional().description("Filter on message title"),
                                 parameterWithName("pollable").optional().description("Filter on pollable (true/false)"),
                                 parameterWithName("finished").optional().description("Filter on finished (true/false)"),
-                                parameterWithName("direction").optional().description(String.format("Filter on direction. Can be one of: %s", Arrays.stream(ConversationDirection.values())
+                                parameterWithName("direction").optional().description("Filter on direction. Can be one of: %s".formatted(Arrays.stream(ConversationDirection.values())
                                         .map(Enum::name)
                                         .collect(Collectors.joining(", "))))
                         ).and(getPagingParameterDescriptors()),
@@ -246,7 +244,7 @@ public class ConversationControllerTest {
                         requestHeaders(
                                 getDefaultHeaderDescriptors()
                         ),
-                        requestParameters(getPagingParameterDescriptors()),
+                        queryParameters(getPagingParameterDescriptors()),
                         responseFields()
                                 .and(conversationDescriptors("content[]."))
                                 .and(pageDescriptors())
