@@ -5,21 +5,19 @@ import no.difi.meldingsutveksling.ServiceIdentifier;
 import no.difi.meldingsutveksling.clock.FixedClockConfig;
 import no.difi.meldingsutveksling.config.*;
 import no.difi.meldingsutveksling.domain.sbdh.StandardBusinessDocument;
-import no.difi.meldingsutveksling.exceptions.AsicPersistenceException;
 import no.difi.meldingsutveksling.exceptions.AsicReadException;
 import no.difi.meldingsutveksling.nextmove.v2.NextMoveInMessageQueryInput;
 import no.difi.meldingsutveksling.nextmove.v2.NextMoveMessageInController;
 import no.difi.meldingsutveksling.nextmove.v2.NextMoveMessageInService;
+import no.difi.meldingsutveksling.oauth2.Oauth2ClientSecurityConfig;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
 import org.mockito.Mock;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.core.io.InputStreamResource;
 import org.springframework.core.io.Resource;
 import org.springframework.data.domain.PageImpl;
@@ -28,7 +26,7 @@ import org.springframework.http.MediaType;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestPropertySource;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.result.MockMvcResultHandlers;
 
@@ -42,7 +40,6 @@ import java.util.zip.ZipOutputStream;
 import static no.difi.meldingsutveksling.nextmove.RestDocumentationCommon.*;
 import static no.difi.meldingsutveksling.nextmove.StandardBusinessDocumentTestData.*;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.BDDMockito.given;
@@ -57,9 +54,8 @@ import static org.springframework.restdocs.payload.PayloadDocumentation.subsecti
 import static org.springframework.restdocs.request.RequestDocumentation.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@ExtendWith(SpringExtension.class)
 @ContextConfiguration(classes = {
-        SecurityConfiguration.class,
+        Oauth2ClientSecurityConfig.class,
         FixedClockConfig.class,
         ValidationConfig.class,
         JacksonConfig.class,
@@ -75,9 +71,9 @@ class NextMoveMessageInControllerTest {
     @Autowired
     private MockMvc mvc;
 
-    @MockBean
+    @MockitoBean
     private NextMoveMessageInService messageService;
-    @MockBean
+    @MockitoBean
     private IntegrasjonspunktProperties integrasjonspunktProperties;
 
     @Mock
@@ -112,12 +108,12 @@ class NextMoveMessageInControllerTest {
                                 requestHeaders(
                                         getDefaultHeaderDescriptors()
                                 ),
-                                requestParameters(
+                                queryParameters(
                                         parameterWithName("messageId").optional().description("Filter on messageId."),
                                         parameterWithName("conversationId").optional().description("Filter on conversationId."),
                                         parameterWithName("receiverIdentifier").optional().description("Filter on receiverIdentifier."),
                                         parameterWithName("senderIdentifier").optional().description("Filter on senderIdentifier."),
-                                        parameterWithName("serviceIdentifier").optional().description(String.format("Filter on serviceIdentifier. Can be one of: %s", Arrays.stream(ServiceIdentifier.values())
+                                        parameterWithName("serviceIdentifier").optional().description("Filter on serviceIdentifier. Can be one of: %s".formatted(Arrays.stream(ServiceIdentifier.values())
                                                 .map(Enum::name)
                                                 .collect(Collectors.joining(", ")))),
                                         parameterWithName("process").optional().description("Filter on process.")
@@ -213,12 +209,12 @@ class NextMoveMessageInControllerTest {
                                 requestHeaders(
                                         getDefaultHeaderDescriptors()
                                 ),
-                                requestParameters(
+                                queryParameters(
                                         parameterWithName("messageId").optional().description("Filter on messageId."),
                                         parameterWithName("conversationId").optional().description("Filter on conversationId."),
                                         parameterWithName("receiverIdentifier").optional().description("Filter on receiverIdentifier."),
                                         parameterWithName("senderIdentifier").optional().description("Filter on senderIdentifier."),
-                                        parameterWithName("serviceIdentifier").optional().description(String.format("Filter on serviceIdentifier. Can be one of: %s", Arrays.stream(ServiceIdentifier.values())
+                                        parameterWithName("serviceIdentifier").optional().description("Filter on serviceIdentifier. Can be one of: %s".formatted(Arrays.stream(ServiceIdentifier.values())
                                                 .map(Enum::name)
                                                 .collect(Collectors.joining(", ")))),
                                         parameterWithName("process").optional().description("Filter on process.")
@@ -250,8 +246,8 @@ class NextMoveMessageInControllerTest {
                                 requestHeaders(
                                         getDefaultHeaderDescriptors()
                                 ),
-                                requestParameters(
-                                        parameterWithName("serviceIdentifier").optional().description(String.format("Filter on serviceIdentifier. Can be one of: %s", Arrays.stream(ServiceIdentifier.values())
+                                queryParameters(
+                                        parameterWithName("serviceIdentifier").optional().description("Filter on serviceIdentifier. Can be one of: %s".formatted(Arrays.stream(ServiceIdentifier.values())
                                                 .map(Enum::name)
                                                 .collect(Collectors.joining(", "))))
                                 ),
@@ -286,7 +282,7 @@ class NextMoveMessageInControllerTest {
                                 requestHeaders(
                                         getDefaultHeaderDescriptors()
                                 ),
-                                requestParameters(
+                                queryParameters(
                                         parameterWithName("messageId").optional().description("Filter on messageId"),
                                         parameterWithName("conversationId").optional().description("Filter on conversationId")
                                 ),
